--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -96,6 +96,9 @@
             border-radius: 5px;
         }
     }
+    .login{
+        margin-top: 10px;
+    }
 }
 
 .newArticle{
@@ -127,6 +130,7 @@
             }
         }
     }
+
 }
 
 
