--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,7 +37,7 @@ body {
 .login-container button {
     width: 100%;
     padding: 10px;
-    background-color: darkcyan;
+    background-color: #11b6b6;
     color: white;
     border: none;
     border-radius: 5px;
