--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,7 @@ body {
 
 .login-area{
     width: 100vw;
-    height: 60vh;
+    height: 63vh;
 }
 
 .login-container {
@@ -15,7 +15,7 @@ body {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-top: 190px;
+    margin-top: 170px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -25,7 +25,8 @@ body {
 }
 
 .login-container input[type="text"],
-.login-container input[type="password"] {
+.login-container input[type="password"],
+.login-container input[type="email"]{
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
